adm-k8s-yamls/Exemplos/18-NetworkPolicy/dev-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-network-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: myapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prod
        - podSelector:
            matchLabels:
              app: siteprod
      ports:
        - port: 80
          protocol: TCP
